--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,24 @@
 [tox]
 envlist =
     quality
+    py27
+    py35
+    py36
 
 # Mark quality as a part of python3.6 build
 [travis]
 python =
-    3.6: quality
+    3.6: py36, quality
 
 [testenv]
 passenv =
     CI TRAVIS TRAVIS_*
+deps =
+    coverage
+    codecov
+commands =
+    coverage run --parallel --source=cz_nia --branch -m unittest discover
+    codecov
 
 [testenv:quality]
 # Do not fail on first error
