--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,8 @@
 [isort]
 line_length = 120
 known_third_party = xmlsec
+combine_as_imports = True
+multi_line_output = 0
 
 [flake8]
 max-line-length = 120
