--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [isort]
 line_length = 120
 known_third_party = xmlsec
+known_first_party = cz_nia
 combine_as_imports = True
 multi_line_output = 0
 
