--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ addons:
 
 before_install:
     - sudo apt-get install -y libxmlsec1-dev
+    - pip install virtualenv -U
 
 install:
     - pip install tox-travis
