Create classes for messages
It will be usefull in the future where we need more message types

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,8 @@ passenv =
 deps =
     coverage
     codecov
+extras =
+    tests
 commands =
     coverage run --parallel --source=cz_nia --branch -m unittest discover
     codecov
@@ -28,3 +30,4 @@ commands =
     isort --recursive --check-only --diff cz_nia
     flake8 --format=pylint --show-source cz_nia
     pydocstyle cz_nia
+    mypy cz_nia
