Upgrade for new isort and fix imports

--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ commands =
 ignore_errors = True
 extras = quality
 commands =
-    isort --recursive --check-only --diff cz_nia
+    isort --check-only --diff cz_nia
     flake8 --format=pylint --show-source cz_nia
     pydocstyle cz_nia
     mypy cz_nia
