fixup! Update tooling and python versions

--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,7 @@ extras =
     tests
 commands =
     coverage run --parallel --source=cz_nia --branch -m unittest discover
+    coverage xml
 
 [testenv:quality]
 # Do not fail on first error
