fixup! fixup! Update tooling and python versions

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ envlist =
     py39
     py310
     py311
+    compute-coverage
 
 [testenv]
 deps =
@@ -15,6 +16,16 @@ extras =
     tests
 commands =
     coverage run --parallel --source=cz_nia --branch -m unittest discover
+
+[testenv:compute-coverage]
+depends =
+    py37
+    py38
+    py39
+    py310
+    py311
+commands =
+    coverage combine
     coverage xml
 
 [testenv:quality]
