--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -27,6 +27,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install tox wheel
+        sudp apt-get update
         sudo apt-get install libxmlsec1-dev
     - name: Run tests
       run: |
