--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python: [3.7, 3.8, 3.9, "3.10", "3.11"]
+        python: [3.8, 3.9, "3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v3
@@ -27,6 +27,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install tox wheel
+        sudo apt-get update
         sudo apt-get install libxmlsec1-dev
     - name: Run tests
       run: |
