--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,8 @@ envlist =
     py39
     py310
     py311
+    py312
+    py313
     compute-coverage
 
 [testenv]
@@ -13,6 +15,8 @@ deps =
     coverage
 extras =
     tests
+commands_pre =
+    pip install --upgrade --force-reinstall xmlsec lxml~=5.0 --no-binary="":all:""
 commands =
     coverage run --parallel --source=cz_nia --branch -m unittest discover
 
@@ -22,6 +26,8 @@ depends =
     py39
     py310
     py311
+    py312
+    py313
 commands =
     coverage combine
     coverage xml
