Switch to ruff for format

--- a/tox.ini
+++ b/tox.ini
@@ -37,7 +37,6 @@ extras =
     quality
     types
 commands =
-    isort --check-only --diff cz_nia
-    flake8 --format=pylint --show-source cz_nia
-    pydocstyle cz_nia
+    ruff check
+    ruff format --check
     mypy cz_nia
