--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ deps =
 extras =
     tests
 commands_pre =
-    pip install --upgrade --force-reinstall xmlsec lxml~=5.0 --no-binary="":all:""
+    pip install --upgrade --force-reinstall xmlsec<=1.3.15 lxml~=5.0 --no-binary="":all:""
 commands =
     coverage run --parallel --source=cz_nia --branch -m unittest discover
 
